# Super-Haxagon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CREDITS.md  INSTALL.md  LICENCE  LICENSE.md  Makefile  Makefile.nspire  README.md  build.bat  cia.rsf  net.awalter.SuperHaxagon.yml
.github/workflows/: build-super-haxagon.yml  build-toolchains.yml
cmake/: libraries.cmake  linux-sdl2.cmake  linux.cmake  macos.cmake  miyoo.cmake  n3ds.cmake  nspire.cmake  null.cmake  portmaster.cmake  sdl2.cmake  sfml.cmake  switch.cmake  windows.cmake
cmake/common/: libraries.cmake  null.cmake  sdl2.cmake  sfml.cmake
cmake/functions/: macos.cmake  n3ds.cmake
cmake/toolchains/: Miyoo-TC.cmake  Nspire-TC.cmake
driver/: compose.yaml
driver/3DS/: 3ds.cmake  Containerfile  LICENSE.md  README.md  build.sh
driver/All/: README.md  common.cmake
driver/Common/: LICENSE.md  README.md  common.cmake
driver/Example/: Containerfile  LICENSE.md  README.md  build.sh  example.cmake
driver/Linux/: Containerfile  build.sh  linux.cmake
driver/Linux-SDL2/: Containerfile  README.md  linux-sdl2.cmake
driver/Miyoo/: Containerfile  README.md  build.sh  miyoo.cmake
driver/N3DS/: 3ds.cmake  INSTALL.md  LICENSE.md  README.md
driver/Nspire/: INSTALL.md  LICENSE.md  README.md  build.sh  nspire.cmake
driver/PortMaster/: README.md  portmaster.cmake
driver/SDL2/: LICENSE.md  README.md  sdl2.cmake
driver/SDL2-Linux/: INSTALL.flatpak.md  INSTALL.native.md  README.md  sdl2-linux.cmake
driver/SDL2-Miyoo/: Containerfile  INSTALL.md  build.sh  sdl2-miyoo.cmake
driver/SDL2-PortMaster/: INSTALL.md  README.md  sdl2-portmaster.cmake
driver/SFML/: LICENSE.md  README.md  sfml.cmake
driver/SFML-Linux/: INSTALL.md  README.md  sfml-linux.cmake
driver/SFML-Windows/: INSTALL.md  sfml-windows.cmake
driver/SFML-macOS/: INSTALL.brew.md  INSTALL.bundle.md  README.md  sfml-macos.cmake
driver/Switch/: INSTALL.md  LICENSE.md  README.md  switch.cmake
driver/Windows/: README.md  windows.cmake
driver/macOS/: macos.cmake
include/: Game.h  Game.hpp  Level.h  Level.hpp  Load.h  Load.hpp  Menu.h  Menu.hpp  Over.hpp  Pattern.h  Pattern.hpp  Play.h  Play.hpp  Quit.h  Quit.hpp  State.h  State.hpp  Structs.h  Structs.hpp  Twist.h  Twist.hpp  Wall.h  Wall.hpp  draw.h  font.h  levels.h  types.h
include/Core/: Audio.hpp  AudioLoader.hpp  Font.hpp  Game.hpp  Metadata.hpp  Platform.hpp  Player.hpp  Structs.hpp  Twist.hpp
include/Driver/: Audio.h  Audio.hpp  Audio3DS.h  Audio3DS.hpp  AudioWin.h  AudioWin.hpp  Font.h  Font.hpp  Font3DS.h  Font3DS.hpp  FontWin.hpp  Platform.h  Platform.hpp  Platform3DS.h  Platform3DS.hpp  PlatformWin.h  PlatformWin.hpp  Player.h  Player.hpp  Player3DS.h  Player3DS.hpp  PlayerWin.hpp
include/Driver3DS/: Audio3DS.hpp  AudioOgg3DS.hpp  AudioWav3DS.hpp  Font3DS.hpp  Platform3DS.hpp  Player3DS.hpp  PlayerOgg3DS.hpp  PlayerWav3DS.hpp
include/DriverSFML/: AudioSFML.hpp  FontSFML.hpp  PlatformSFML.hpp  PlayerSFML.hpp  PlayerSoundSFML.hpp
include/DriverWin/: AudioWin.hpp  FontWin.hpp  PlatformWin.hpp  PlayerWin.hpp
include/Factories/: Level.hpp  LevelFactory.hpp  Pattern.hpp  Wall.hpp  WallFactory.hpp
include/Objects/: Wall.hpp
include/States/: Load.hpp  Menu.hpp  Over.hpp  Play.hpp  Quit.hpp  State.hpp  Transition.hpp  Win.hpp
include/driver/: driver.h  driver_3ds.h  driver_3ds_audio.h  driver_windows.h
leveledit/: .project
leveledit-two/hexlevels/: hexagon.head
libraries/: .gitignore
media/: COMMON.blend  Hexagon.blend  banner.cgfx
media/3ds/: banner.cgfx
media/linux/: net.awalter.SuperHaxagon.desktop
media/macos/: SuperHaxagon-README.md
media/miyoo/: config.json  launch.sh
media/portmaster/: README.md  SuperHaxagon.sh  gameinfo.xml
media/sources/: icon-macos.kra  miyoo-banner.kra  miyoo-icon.kra
resource/: COMMON.blend  COMMON.mtl  Hexagon.blend  Hexagon.ipt  banner.cgfx  cia-BGM.rsf  cia-NO-BGM.rsf  cia.rsf
romfs/: bump-it-up-16.bcfnt  bump-it-up-32.bcfnt  font16.bff  font32.bff  internal.haxagon  levels.haxagon  patterns.leve
romfs/bgm/: callMeKatla.txt  captainCool.txt  commandoSteve.txt  drFinkelfracken.txt  esiannoyamFoEzam.txt  jackRussel.txt  mazeOfMayonnaise.txt  screenSaver.txt
romfs/music/: callMeKatla.bin.REMOVED.git-id  commandoSteve.bin.REMOVED.git-id  drFinkelfracken.bin.REMOVED.git-id
sdmc/: README.md
source/: Game.cpp  Level.cpp  Load.cpp  Main.cpp  Menu.cpp  Over.cpp  Pattern.cpp  Play.cpp  Structs.cpp  Wall.cpp  draw.c  draw.h  font.c  font.cpp  font.h  header.h  levels.c  levels.h  logic.c  logic.h  main.c  main.cpp  score.c  score.h  scores.c  scores.h  sound.c  sound.h  triangle.c  triangle.h  types.c  types.h  util.c  util.h
source/Core/: AudioPlayer.hpp  Camera.cpp  Camera.hpp  Configuration.hpp.in  Game.cpp  Game.hpp  Main.cpp  Matrix.cpp  Matrix.hpp  Metadata.cpp  Metadata.hpp  Platform.cpp  Platform.hpp  Structs.cpp  Structs.hpp  SurfaceGame.cpp  SurfaceGame.hpp  SurfaceUI.cpp  SurfaceUI.hpp  Twist.hpp  Vector.cpp  Vector.hpp
source/Driver/: Audio3DS.cpp  AudioWin.cpp  Font.hpp  Font3DS.cpp  FontWin.cpp  Music.hpp  Platform.hpp  Platform3DS.cpp  PlatformWin.cpp  Player3DS.cpp  PlayerWin.cpp  Screen.hpp  Sound.hpp
source/Driver3DS/: Audio3DS.cpp  AudioOgg3DS.cpp  AudioWav3DS.cpp  Font3DS.cpp  Platform3DS.cpp  Player3DS.cpp  PlayerOgg3DS.cpp  PlayerWav3DS.cpp
source/DriverSFML/: AudioSFML.cpp  PlatformSFML.cpp  PlayerMusicSFML.cpp  PlayerSFML.cpp  PlayerSoundSFML.cpp
source/DriverWin/: AudioWin.cpp  FontSFML.cpp  FontWin.cpp  PlatformSFML.cpp  PlatformWin.cpp  PlayerWin.cpp
source/Factories/: Level.cpp  LevelFactory.cpp  LevelFactory.hpp  Pattern.cpp  PatternFactory.cpp  PatternFactory.hpp  Wall.cpp  WallFactory.cpp  WallFactory.hpp
source/Objects/: Level.cpp  Level.hpp  Pattern.cpp  Pattern.hpp  Wall.cpp  Wall.hpp
source/States/: Load.cpp  Load.hpp  Menu.cpp  Menu.hpp  Over.cpp  Over.hpp  Play.cpp  Play.hpp  Quit.cpp  Quit.hpp  State.hpp  Title.cpp  Title.hpp  Transition.cpp  Transition.hpp  Win.cpp  Win.hpp
tools/: compose.yaml  flatpak.sh  portmaster.sh  release.sh
(+288 files in other folders)
